add bearychat webhook

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,3 +28,5 @@ branches:
 env:
  global:
    - GH_REF: github.com/aprilfish/aprilfish.github.io.git
+notifications:
+  webhooks: https://hook.bearychat.com/=bw8SX/travis/e142579261034054d121bf42c676e5a3
