--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -238,7 +238,7 @@ mathjax:
 #baidu_analytics:
 
 # Duoshuo ShortName
-#duoshuo_shortname:
+duoshuo_shortname: aprilfish
 
 # Disqus
 #disqus_shortname:
