--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -138,7 +138,7 @@ social_icons:
 # Sidebar Avatar
 # in theme directory(source/images): /images/avatar.jpg
 # in site  directory(source/uploads): /uploads/avatar.jpg
-avatar: /images/avatar.jpg 
+avatar: /images/avatar.jpg
 
 # Table Of Contents in the Sidebar
 toc:
@@ -237,7 +237,7 @@ mathjax:
 #baidu_analytics:
 
 # Duoshuo ShortName
-duoshuo_shortname: aprilfish
+#duoshuo_shortname: aprilfish
 
 # Disqus
 #disqus_shortname:
