--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.7.1"
   },
   "dependencies": {
+    "gitalk": "^1.7.2",
     "hexo": "^3.7.0",
     "hexo-algolia": "^1.2.5",
     "hexo-generator-archive": "^0.1.5",
